# IU9-educational-tasks

./: README.md  xxe.xml
Bioinformatics/Lab0/: CMakeLists.txt  ShinglesAndNaive.cpp
Compilers/Lab1/: btpc64.pas  btpc64_2.pas  btpc64_3.pas  test1.pas
Compilers/Lab2/: astprint.go  demo.go  demo_new.go  lab19.go
Compilers/Lab3/: programm.txt
Compilers/Lab4/: programm.txt
Compilers/Lab5/: graph_nfa.txt  nfa.txt  programm.txt
Compilers/Lab6/: file.txt  lab6.l
Compilers/Lab7.1/: file.txt
Compilers/Lab8/: file.txt
Java/: Calc.java  Element.java  MaxNumber.java  SkipList.java  SparseSet.java  Sync_1.java
JavaStudy/: Econom1.java  FastFib.java  Gauss.java  IntSparseSet.java  Kth.java  MinDist.java
Modeling/go_implementation/: input.txt  main.go
Numerical Methods of Linear Algebra/: Matrix.cpp  Matrix.h  Vector.h  main.cpp
Numerical Methods of Linear Algebra/GaussMethod/: CMakeLists.txt  LASolver.cpp  LASolver.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  main.cpp  test.txt
Numerical Methods of Linear Algebra/IterationMethods/: JakobiMethod.cpp  JakobiMethod.h  ZeidelMethod.cpp  ZeidelMethod.h
Numerical Methods of Linear Algebra/Primitives/: Matrix.cpp  Matrix.h  Round.cpp  Round.h  Vector.cpp  Vector.h
Numerical Methods of Linear Algebra/Test/: CMakeLists.txt  main.cpp  test.txt
NumericalMethods/: CMakeLists.txt  inaccuracy.cpp  interpolation.cpp  main_error.cpp  optimization.cpp  pow-pow.cpp
NumericalMethods/cpp_implementation/: cauchy_progonka.cpp  double_integral.cpp  integral.cpp  interpolation.cpp  main.cpp  newton.cpp  pow-pow.cpp
NumericalMethods/go_implementation/: main.go
OpenGl/: Laba4.cpp  lab_2_Spiridonova.cpp  lab_3_Spiridonova.cpp  lab_5_Spiridonova.cpp  lab_6_Spiridonova.cpp
Optimal Code Generation/Lab2/: CMakeLists.txt  Kal_test  Lab2  Lab2.cpp  aaaa.ll  try.c  try.ll
Optimal Code Generation/Lab3/: CMakeLists.txt  Lab3.cpp  file.txt  output.txt
Scala/Lab1/: Peak.scala
Scala/Lab2/: IntVector.scala  Lab2.scala  Vector.scala
Scala/Lab4/: Lab4.scala  Range.scala
TFL/: CMakeLists.txt  first_0.cpp  fourth_0.cpp  fourth_0_1.cpp  regexLab.cpp  second_0.cpp  third_0.cpp
TFL/files/: first.txt  second.xml
Transact-SQL/: SQLQuery1.sql  SQLQuery2.sql  SQLQuery3.sql  SQLQuery4.sql  SQLQuery5_1.sql
Transact-SQL/10 LAB/: SQLQuery14_1.sql  SQLQuery14_2.sql
(+134 files in other folders)
